Add new features: - loading indication - fix styles

--- a/client/angular.json
+++ b/client/angular.json
@@ -30,8 +30,10 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
-              "src/styles.scss"
+              "node_modules/bootswatch/dist/simplex/bootstrap.min.css",
+              "node_modules/ngx-spinner/animations/ball-fussion.css"
             ],
             "scripts": []
           },
