[feature] API Identity

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,12 +2,18 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft": "Information",
       "Microsoft.AspNetCore": "Information"
     }
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=skinet.db",
+    "IdentityConnection": "Data source=identity.db",
     "Redis": "localhost"
+  },
+  "Token": {
+    "Key": "dn*#Fqqk_D+eZr%4gD@QWnXxX@kg=6F=agyW5JgfmaccFrZPB=dt$76k+zmRGWf-4-u^Hk3@",
+    "Issuer": "https://localhost:5001"
   },
   "ApiUrl": "https://localhost:5001/"
 }
