--- a/client/angular.json
+++ b/client/angular.json
@@ -30,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/bootswatch/dist/simplex/bootstrap.min.css",
