--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,13 +7,13 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=skinet.db",
-    "IdentityConnection": "Data source=identity.db",
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=appuser; Password=secret; Database=skinet",
+    "IdentityConnection": "Server=localhost; Port=5432; User Id=appuser; Password=secret; Database=identity",
     "Redis": "localhost"
   },
   "Token": {
     "Key": "dn*#Fqqk_D+eZr%4gD@QWnXxX@kg=6F=agyW5JgfmaccFrZPB=dt$76k+zmRGWf-4-u^Hk3@",
     "Issuer": "https://localhost:5001"
   },
-  "ApiUrl": "https://localhost:5001/"
+  "ApiUrl": "https://localhost:5001/Content/"
 }
