--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngrx/effects": "^16.2.0",
+    "@ngrx/router-store": "^16.2.0",
+    "@ngrx/store": "^16.2.0",
+    "@ngrx/store-devtools": "^16.2.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@stripe/stripe-js": "^2.1.0",
     "bootstrap": "^5.2.3",
@@ -39,6 +43,7 @@
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
+    "@ngrx/schematics": "^16.2.0",
     "@openapitools/openapi-generator-cli": "^2.7.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
