--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@ngrx/effects": "^16.2.0",
+    "@ngrx/entity": "^16.2.0",
+    "@ngrx/eslint-plugin": "^16.2.0",
     "@ngrx/router-store": "^16.2.0",
     "@ngrx/store": "^16.2.0",
     "@ngrx/store-devtools": "^16.2.0",
@@ -40,18 +42,14 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
+    "@angular-builders/jest": "16.0.1",
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
+    "@briebug/jest-schematic": "^6.0.0",
     "@ngrx/schematics": "^16.2.0",
     "@openapitools/openapi-generator-cli": "^2.7.0",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "@types/lodash.memoize": "^4.1.7",
     "typescript": "~5.1.3"
   }
 }
