--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,14 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
     "generate-api": "openapi-generator-cli generate  -i http://localhost:5000/swagger/v1/swagger.json -g typescript-angular -o src/app/api",
-    "ionic:build": "npm run build",
-    "ionic:serve": "npm run start"
+    "lint": "ng lint",
+    "test": "jest --testPathIgnorePatterns='.integration.spec.ts$'",
+    "test:watch": "jest --watch --testPathPattern='.unit.spec.ts$'",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest --testPathPattern='.unit.spec.ts$'",
+    "test:integration": "jest --testPathPattern='.integration.spec.ts$'",
+    "prettier": "npx prettier --write ."
   },
   "private": true,
   "dependencies": {
@@ -27,7 +31,6 @@
     "@ngrx/eslint-plugin": "^16.2.0",
     "@ngrx/router-store": "^16.2.0",
     "@ngrx/store": "^16.2.0",
-    "@ngrx/store-devtools": "^16.2.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@stripe/stripe-js": "^2.1.0",
     "bootstrap": "^5.2.3",
@@ -42,14 +45,44 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-builders/jest": "16.0.1",
+    "@angular-builders/jest": "^16.0.1",
     "@angular-devkit/build-angular": "^16.2.0",
+    "@angular-eslint/builder": "16.1.2",
+    "@angular-eslint/eslint-plugin": "16.1.2",
+    "@angular-eslint/eslint-plugin-template": "16.1.2",
+    "@angular-eslint/schematics": "16.1.2",
+    "@angular-eslint/template-parser": "16.1.2",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
-    "@briebug/jest-schematic": "^6.0.0",
     "@ngrx/schematics": "^16.2.0",
+    "@ngrx/store-devtools": "^16.2.0",
     "@openapitools/openapi-generator-cli": "^2.7.0",
-    "@types/lodash.memoize": "^4.1.7",
+    "@types/jest": "^29.5.4",
+    "@types/text-encoding": "^0.0.36",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.6.4",
+    "jest-preset-angular": "^13.1.1",
+    "prettier": "^3.0.3",
+    "prettier-eslint": "^15.0.1",
+    "text-encoding": "^0.7.0",
     "typescript": "~5.1.3"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "<rootDir>/setup-jest.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/",
+      "<rootDir>/dist/"
+    ],
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/src/$1",
+      "^@paralleldrive/cuid2$": "<rootDir>/node_modules/@paralleldrive/cuid2"
+    }
   }
 }
