--- a/client/tsconfig.spec.json
+++ b/client/tsconfig.spec.json
@@ -1,13 +1,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "esModuleInterop": true,
     "outDir": "./out-tsc/spec",
-    "types": [
-      "jest"
-    ]
+    "types": ["jest", "node"]
   },
-  "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-  ]
+  "files": ["./setup-jest.ts"],
+  "include": ["src/**/*.spec.ts", "src/**/*.d.ts", "./setup-jest.ts"]
 }
