--- a/client/package.json
+++ b/client/package.json
@@ -53,9 +53,13 @@
     "@angular-eslint/template-parser": "16.1.2",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
+    "@ngrx/eslint-plugin": "^16.2.0",
     "@ngrx/schematics": "^16.2.0",
     "@ngrx/store-devtools": "^16.2.0",
     "@openapitools/openapi-generator-cli": "^2.7.0",
+    "@testing-library/angular": "^14.3.0",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.4",
     "@types/text-encoding": "^0.0.36",
     "@typescript-eslint/eslint-plugin": "5.62.0",
@@ -65,10 +69,12 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.4",
     "jest-preset-angular": "^13.1.1",
+    "msw": "^1.3.0",
     "prettier": "^3.0.3",
     "prettier-eslint": "^15.0.1",
     "text-encoding": "^0.7.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "whatwg-fetch": "^3.6.18"
   },
   "jest": {
     "preset": "jest-preset-angular",
