--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "test:watch": "jest --watch --testPathIgnorePatterns='.integration.spec.ts$'",
     "test:coverage": "jest --coverage --testPathIgnorePatterns='.integration.spec.ts$'",
     "test:integration": "jest --testPathPattern='.integration.spec.ts$'",
-    "prettier": "npx prettier --write ."
+    "prettier": "npx prettier --write .",
+    "compodoc": "npx compodoc -p tsconfig.doc.json"
   },
   "private": true,
   "dependencies": {
@@ -53,6 +54,7 @@
     "@angular-eslint/template-parser": "16.1.2",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
+    "@compodoc/compodoc": "^1.1.21",
     "@ngrx/eslint-plugin": "^16.2.0",
     "@ngrx/schematics": "^16.2.0",
     "@ngrx/store-devtools": "^16.2.0",
